--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
           "prefix": "",
           "style": "less",
           "spec": false,
-          "skipImport": true
+          "skipImport": true,
+          "changeDetection": "OnPush"
         },
         "@schematics/angular:directive": {
           "prefix": "",
@@ -49,7 +50,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
+            ],
             "styles": ["src/styles.less"],
             "scripts": []
           },
